@startuml

title __MYWARDROBE's Class Diagram__\n

  namespace com.lilianortizcosta.virtwardrobe {
    namespace ui.mywardrobe {
      class com.lilianortizcosta.virtwardrobe.ui.mywardrobe.MyWardrobeFragment {
          - categorySelected : Integer
          - context : Context
          - db : SQLiteDatabase
          - itemToDeleteId : String
          - itemToDeleteTitle : String
          - root : View
          - rootLayout : LinearLayout
          - textMyWardrobe : TextView
          - todayDate : String
          + DeleteAnItem()
          + SelectForTodayChange()
          + SelectForTodayOnLoad()
          + loadCategoryData()
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    namespace ui.mywardrobe {
      class com.lilianortizcosta.virtwardrobe.ui.mywardrobe.MyWardrobeHelper {
          + NewPhotoToolButton()
      }
    }
  }
  

  com.lilianortizcosta.virtwardrobe.ui.mywardrobe.MyWardrobeFragment -up-|> androidx.fragment.app.Fragment
  com.lilianortizcosta.virtwardrobe.ui.mywardrobe.MyWardrobeFragment o-- com.lilianortizcosta.virtwardrobe.databinding.FragmentMyWardrobeBinding : binding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
